--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,20 +1,5 @@
 <div class="cards">
   <% @cards.each do |card| %>
-    <div class="card">
-      <p class="card__title">Killer card de <strong><%= card.player %></strong></p>
-      <div class="side-by-side">
-        <div>
-          <p class="card__action">🎯 Ta mission<br/>
-            Fais en sorte que <strong><%= card.target %></strong> effectue l'action suivante:<br/>
-            <strong><%= card.action %></strong>
-          </p>
-          <p class="card__help">Fais réaliser cette action à ta victime et remporte sa carte. Ensuite, remplis ton nouvel objectif!</p>
-        </div>
-        <div class="text-center">
-          <p class="card__help">Lien de ta carte</p>
-          <%= qr_code public_card_url(card.token) %>
-        </div>
-      </div>
-    </div>
+    <%= render 'cards/card_print', card: card %>
   <% end %>
 </div>
