--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -16,7 +16,8 @@
   <div>
     <%= form.label :players %>
     <%= form.text_area :players, rows: 10 %>
-    <small>Un élement par ligne, c'est aussi simple que ça.</small>
+    <small>Un élement par ligne, c'est aussi simple que ça.<br/>
+      Pour faciliter le jeu, tu peux ajouter une petite description (Exemple: "Alexandre, un blond qui passe sont temps à boire des bières.")</small>
   </div>
   <div>
     <%= form.label :actions %>
