--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -1,8 +1,8 @@
 <% unless @card.done? %>
-  <h1>🎯 Remplir ma mission</h1>
+  <h1>🎯 <%= t '.todo' %></h1>
   <%= render 'cards/card', card: @card %>
 <% else %>
-  <h1>🎉 Mission effectuée!</h1>
+  <h1>🎉 <%= t '.done' %></h1>
   <p>Bien joué! Tu as effectué ta mission!</p>
   <p>Prend la carte de <strong><%= @card.target %></strong> et essaie de réaliser sa mission pour engranger plus de points.</p>
   <div class="grid">
@@ -10,9 +10,9 @@
     <%= render 'cards/card', card: @card %>
   </div>
 <% end %>
-<h2>Où en est le jeu?</h2>
+<h2><%= t 'where_the_game_is_at' %></h2>
 <%= render 'games/dashboard', game: @card.game %>
-<%= link_to "Raffraichir cette page", game_card_path(game_id: @card.game_id, id: @card.token ) %>
+<%= link_to t('refresh_this_page'), game_card_path(game_id: @card.game_id, id: @card.token ) %>
 <%= link_to game_path(@card.game.id), role: :button  do %>
-  Gérer la partie <mark>admin</mark>
+  Gérer la partie <mark><%= t 'admin' %></mark>
 <% end if is_admin? @card.game %>
