--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<h1>Générateur du jeu Killer</h1>
+<h1><%= @title %></h1>
 <p class="text-center"><%= render "games/dashboards_list" %></p>
 <p>Le "killer" est un jeu dans lequel tu devras faire preuve de créativité et mettre en place divers stratagèmes pour tenter d'éliminer un à un les autres participants tout en protégeant leur propre vie.</p>
 <h2>Les règles</h2>
