--- a/app/views/games/_dashboards_list.html.erb
+++ b/app/views/games/_dashboards_list.html.erb
@@ -1,13 +1,19 @@
 <% if @games_saw.size != 0 || @cards_saw.size != 0 %>
   <article>
-    <header>🚧 Partie en cours</header>
-    <p>Tu participe actuellement à une partie.</p>
+    <header><%= t 'games_dashboard.title' %></header>
+    <p><%= t 'games_dashboard.description' %></p>
     <div class="text-center">
       <% @games_saw.each do |game| %>
-        <%= link_to "📊 Voir la partie en cours \"#{game.name}\"", game_dashboard_path(game.token), role: :button, class: "secondary" %>
+        <%= link_to t('games_dashboard.game_link', name: game.name), game_dashboard_path(game.token),
+          role: :button, class: "secondary" %>
       <% end %>
       <% @cards_saw.each_with_index do |card, index| %>
-        <%= link_to "🎯 Carte ##{index + 1} #{card.done? ? '✅' : '⬜'}", public_card_path(card.token), role: :button, class: "secondary" %>
+        <%= link_to t('games_dashboard.card_link',
+            index: (index + 1),
+            status: (card.done? ? '✅' : '⬜')
+          ),
+          public_card_path(card.token),
+          role: :button, class: "secondary" %>
       <% end %>
     </div>
   </article>
