enable player description

--- a/app/views/cards/_card_print.html.erb
+++ b/app/views/cards/_card_print.html.erb
@@ -1,5 +1,5 @@
 <div class="card">
-  <p class="card__title">Killer card de <strong><%= card.player %></strong></p>
+  <p class="card__title">Killer card de <strong><%= player_name card.player %></strong></p>
   <div class="side-by-side">
     <div>
       <p class="card__action">🎯 Ta mission<br/>
