--- a/app/views/cards/_table.html.erb
+++ b/app/views/cards/_table.html.erb
@@ -23,7 +23,7 @@
         <td><%= render("cards/form", card: card) %></td>
         <td><%= render 'games/player', player: card.player %></td>
         <td><%= card.action %></td>
-        <td><%= card.target %></td>
+        <td><%= render 'games/player', player: card.target %></td>
         <td>
           <%= link_to 'Lien de la carte', public_card_path(card.token) %>
         </td>
