--- a/app/views/cards/edit.html.erb
+++ b/app/views/cards/edit.html.erb
@@ -1,10 +1,6 @@
-<h1>Editing card</h1>
-
+<h1><%= @title %></h1>
 <%= render "form", card: @card %>
-
 <br>
-
 <div>
-  <%= link_to "Show this card", @card %> |
-  <%= link_to "Back to cards", cards_path %>
+  <%= link_to t('games.show.title'), @card.game %>
 </div>
