--- a/app/views/games/edit.html.erb
+++ b/app/views/games/edit.html.erb
@@ -5,6 +5,6 @@
 <% end %>
 <%= render "form", game: @game %>
 <div>
-  <%= link_to "Show this game", @game %> |
-  <%= link_to "Back to games", games_path %>
+  <%= link_to t('games.show.title'), @game %> |
+  <%= link_to t('games.index.title'), games_path %>
 </div>
