--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -2,5 +2,5 @@
 <%= render "form", game: @game %>
 <br>
 <div>
-  <%= link_to "Back to games", games_path %>
+  <%= link_to t('games.index.title'), games_path %>
 </div>
