fix asset pipeline

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,7 +21,7 @@
   <summary>🖨 <%= t('how_it_works.steps.print.title') %></summary>
   <%= render 'shared/sentences', key: "how_it_works.steps.print.description" %>
   <div class="text-center">
-    <%= image_tag 'card-example', alt: "Exemple d'une carte a imprimmer et découper" %>
+    <%= image_tag 'card-example.png', alt: "Exemple d'une carte a imprimmer et découper" %>
   </div>
 </details>
 <details>
