--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: card, url: game_card_path(game_id: card.game.id, id: card.token), remote: true) do |form| %>
+<%= form_with(model: card, url: game_card_path(game_id: card.game_id, id: card.token), remote: true) do |form| %>
   <div class="grid">
     <div>
       <%= form.label :player %>
@@ -7,6 +7,7 @@
     <div>
       <%= form.label :target %>
       <%= form.text_field :target, disabled: true %>
+      <small><%= t 'card_form.target_help' %> <%= link_to t('games.edit.title'), edit_game_path(card.game_id) %></small>
     </div>
   </div>
   <%= form.label :action %>
