--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -10,8 +10,8 @@
       <td><%= link_to game.name, game %></td>
       <td>
         <ul>
-          <li><%= game.players_list.size %> <%= Game.human_attribute_name("players") %></li>
-          <li><%= game.actions_list.size %> <%= Game.human_attribute_name("actions") %></li>
+          <li><%= game.get_players_list.size %> <%= Game.human_attribute_name("players") %></li>
+          <li><%= game.get_actions_list.size %> <%= Game.human_attribute_name("actions") %></li>
           <li><%= pluralize game.cards.map(&:done?).size, t('cards_done_count.one'), t('cards_done_count.other') %> </li>
         </ul>
       </td>
