--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -3,8 +3,8 @@
   <%= render 'cards/card', card: @card %>
 <% else %>
   <h1>🎉 <%= t '.done' %></h1>
-  <p>Bien joué! Tu as effectué ta mission!</p>
-  <p>Prend la carte de <strong><%= @card.target %></strong> et essaie de réaliser sa mission pour engranger plus de points.</p>
+  <p><%= t 'card_view.well_done' %></p>
+  <p><%= t('card_view.after_done_instructions', target: @card.target).html_safe %></p>
   <div class="grid">
     <div style="padding-top:56.250%;position:relative;"><iframe src="https://gifer.com/embed/<%= weel_done_giffer_id %>" width="100%" height="100%" style='position:absolute;top:0;left:0;' frameBorder="0" allowFullScreen></iframe></div>
     <%= render 'cards/card', card: @card %>
@@ -14,5 +14,5 @@
 <%= render 'games/dashboard', game: @card.game %>
 <%= link_to t('refresh_this_page'), game_card_path(game_id: @card.game_id, id: @card.token ) %>
 <%= link_to game_path(@card.game.id), role: :button  do %>
-  Gérer la partie <mark><%= t 'admin' %></mark>
+  <%= t 'games.show.title' %> <mark><%= t 'admin' %></mark>
 <% end if is_admin? @card.game %>
