--- a/app/views/games/_faq.html.erb
+++ b/app/views/games/_faq.html.erb
@@ -1,6 +1,7 @@
-<% t('faq').each_key do |item| %>
+<p><%= t 'faq.description' %></p>
+<% t('faq.items').each_key do |item| %>
   <details>
-    <summary><%= t "faq.#{item}.summary" %></summary>
-    <%= render 'shared/sentences', key: "faq.#{item}.description" %>
+    <summary><%= t "faq.items.#{item}.summary" %></summary>
+    <%= render 'shared/sentences', key: "faq.items.#{item}.description" %>
   </details>
 <% end %>
