--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,12 @@
 <h1><%= @title %></h1>
 <p class="text-center"><%= render "games/dashboards_list" %></p>
 <p>Le "killer" est un jeu dans lequel tu devras faire preuve de créativité et mettre en place divers stratagèmes pour tenter d'éliminer un à un les autres participants tout en protégeant leur propre vie.</p>
+<div class="balloons">
+  <%= render 'shared/balloon', content: t('balloons_example')[0], left: true %>
+  <%= render 'shared/balloon', content: t('balloons_example')[1], right: true %>
+  <%= render 'shared/balloon', content: t('balloons_example')[2], left: true %>
+  <%= render 'shared/balloon', content: t('balloons_example')[3], right: true %>
+</div>
 <h2><%= t 'game_rules' %></h2>
 <%= render 'games/rules' %>
 <h2><%= t 'how_it_works.title' %></h2>
