--- a/app/views/cards/_table.html.erb
+++ b/app/views/cards/_table.html.erb
@@ -1,4 +1,4 @@
-<% is_search_active = params[:player] || params[:target]  || params[:target] %>
+<% is_search_active = params[:player] || params[:card_action] %>
 <details <%= 'open' if is_search_active %> %>
   <summary>Rechercher <%if is_search_active%> <mark>résultats filtrés</mark> <% end %></summary>
   <%= form_with(method: :get) do |form| %>
@@ -21,9 +21,21 @@
     <% cards.each do |card| %>
       <tr>
         <td><%= render("cards/toggle_form", card: card) %></td>
-        <td><%= render 'games/player', player: card.player %></td>
+        <td>
+          <% if card.done? %>
+            <ins><%= render 'games/player', player: card.player %></ins>
+          <% else %>
+            <%= render 'games/player', player: card.player %>
+          <% end %>
+        </td>
         <td><%= card.action %></td>
-        <td><%= render 'games/player', player: card.target %></td>
+        <td>
+          <% if card.done? %>
+            <del><%= render 'games/player', player: card.target %></del>
+          <% else %>
+            <%= render 'games/player', player: card.target %>
+          <% end %>
+        </td>
         <td>
           <ul>
             <li><%= link_to 'Lien de la carte', public_card_path(card.token) %></li>
