--- a/app/views/cards/_card.html.erb
+++ b/app/views/cards/_card.html.erb
@@ -1,4 +1,4 @@
-<article class="card">
+<article class="card-print">
   <header><%= t 'card_print.your_mission' %></header>
   <p><%= t('card_print.need_to_make', target: player_pretty(card.target) ).html_safe %><br/>
     <strong><%= card.action %></strong>
